--- a/package.json
+++ b/package.json
@@ -14,7 +14,26 @@
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "animate.css": "^3.7.0",
+    "bootstrap-select": "^1.13.2",
+    "chartist": "^0.11.0",
+    "clipboard": "^2.0.1",
+    "custombox": "^4.0.3",
+    "datatables": "^1.10.18",
+    "flag-icon-css": "^3.0.0",
+    "flatpickr": "^4.5.1",
+    "gmaps": "^0.4.24",
+    "instafeed.js": "^1.4.1",
+    "ion-rangeslider": "^2.2.0",
+    "jquery": "^3.3.1",
+    "jquery-migrate": "^3.0.1",
+    "jquery-validation": "^1.17.0",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
+    "popper.js": "^1.14.4",
+    "summernote": "^0.8.10",
+    "svg-injector": "^1.1.3",
+    "typed.js": "^2.0.9"
   },
   "browserslist": [
     "> 1%",
@@ -26,11 +45,16 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "browser-sync": "^2.24.7",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "file-loader": "^1.1.4",
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-pngquant": "^5.1.0",
     "vue-loader": "^13.7.3",
-    "vue-template-compiler": "^2.4.4",
+    "vue-svg-loader": "^0.12.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
