--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "babel-preset-stage-2": "^6.24.1",
-    "vue": "^2.5.11",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.1",
     "animate.css": "^3.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap-select": "^1.13.2",
     "chartist": "^0.11.0",
     "clipboard": "^2.0.1",
     "custombox": "^4.0.3",
     "datatables": "^1.10.18",
+    "express": "^4.17.1",
     "flag-icon-css": "^3.0.0",
     "flatpickr": "^4.5.1",
     "gmaps": "^0.4.24",
@@ -33,7 +30,11 @@
     "popper.js": "^1.14.4",
     "summernote": "^0.8.10",
     "svg-injector": "^1.1.3",
-    "typed.js": "^2.0.9"
+    "typed.js": "^2.0.9",
+    "vue": "^2.5.11",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "browserslist": [
     "> 1%",
